--- a/dbSites.yaml
+++ b/dbSites.yaml
@@ -2,6 +2,7 @@
          hostName: realt.ua,
          port: 0,
          resourcePath: Db2/0Sd_Kv.php,
+         resourcePath2: Db2,
          parameters: {  Cn_min: 100,
                         Cn_max: 300,
                         TmSdch: 9999,
@@ -10,16 +11,23 @@
                         vSps: 0,
                         idNp: 100000,
                         pos: 0,
-                        valt: 0 
+                        valt: 2
                       },
-         regexpr: !ruby/regexp '/(http.*)(vid=)(\w*)(\S*\b)/',
-         typePath: false
+         regexpr: !ruby/regexp '/(vid=)(\w*)(\S*\b)/',
+         id: vid,
+         typePath: false,
+         variable: { priceMin: Cn_min, priceMax:  Cn_max, valute: valt},
+
+         valute: { 2: dolars, 4: euro, 1: hryvnia}    
         }
 
-:blagovist: {  scheme: http,
+
+
+:blagovist: { scheme: http,
               hostName: blagovist.ua,
               port: 0,
               resourcePath: realtysearch/rentflat.lisp,
+              resourcePath2: realtyshow/showinfo.lisp, 
               parameters: {  p_RuType: 257,
                              p_Region: 1,
                              p_Price1: 1000,
@@ -28,8 +36,12 @@
                              p_NFloors2: 100,
                              page: 9
                            },
-              regexpr: !ruby/regexp '/hhhhhhh/',
-              typePath: false
+              regexpr: !ruby/regexp '/(lisp\?id=)(\d*)/',
+              id: id,
+              typePath: false,
+              variable: { priceMin: p_Price1, priceMax:  p_Price2, valute: valt},
+
+              valute: { valt: hryvnia}
            }
 
 
